# beginning-rust

./: README.md  memo
projects/adder/src/: lib.rs
projects/axum/: Cargo.toml
projects/axum/src/: main.rs
projects/axum/templates/: index.html
projects/branches/src/: main.rs
projects/egui/: Cargo.toml
projects/egui/src/: main.rs
projects/enum_match/src/: main.rs
projects/field/src/: main.rs
projects/functions/src/: main.rs
projects/guess_word/: Cargo.toml
projects/guess_word/src/: gui.rs  lib.rs  main.rs  words.txt
projects/guessing_game/: Cargo.toml
projects/hashmap/src/: main.rs
projects/minigrep/src/: lib.rs  main.rs
projects/ownership/src/: main.rs
projects/panic/src/: main.rs
projects/rectangles/src/: main.rs
projects/releaseprofile/: Cargo.toml
projects/releaseprofile/src/: lib.rs
projects/restaurant/src/: lib.rs
projects/roops/: Cargo.toml
projects/roops/src/: main.rs
projects/slice/src/: main.rs
projects/variables/src/: main.rs
projects/vec/: Cargo.toml
projects/vec/src/: main.rs
