[package]
name = "axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.9"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.25", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum-template = "0.14.0"
tera = "1.17.1"